...
            ToolbarItemGroup(placement: .navigationBarTrailing){
                if !editButtonIsClicked{
                    Button(action:{editButtonIsClicked = !editButtonIsClicked
                        
                        self.editMode = self.editMode == .active ? .inactive : .active
                        print("editButton is click")
                    }, label: {Text("Edit")})
                } else {
                    
                    if !resetButtonIsClicked{
                        Button(action: {self.resetButtonIsClicked = !self.resetButtonIsClicked
                        // then do sth else
//                        print(resetButtonIsClicked)
...
                        }
                        self.resetButtonIsClicked = false
                        self.editMode = self.editMode == .active ? .inactive : .active
                        print("done is clicked")
                        print(editButtonIsClicked)

                    }, label: {Text("Done")})
                    
                }
            }
        }
    }
}
...
